--- a/css/livecod-custom.css
+++ b/css/livecod-custom.css
@@ -2,8 +2,9 @@
 h1.title {
     color: #111; 
     font-family: 'Noto Sans KR', sans-serif; 
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     line-height: 1;
+    color: #04253a;
 }
 
