--- a/css/livecod-custom.css
+++ b/css/livecod-custom.css
@@ -1,10 +1,8 @@
-
 h1.title {
-    color: #111; 
-    font-family: 'Noto Sans KR', sans-serif; 
-    font-size: 2rem;
-    font-weight: bold;
-    line-height: 1;
-    color: #04253a;
+  color: #111;
+  font-family: "NanumSquareRound", sans-serif;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 1;
+  color: #04253a;
 }
-
