안전수칙 이미지 태그 수정

--- a/css/common.css
+++ b/css/common.css
@@ -113,6 +113,8 @@ label{
 * html .clearfix             { zoom: 1; } /* IE6 */
 *:first-child+html .clearfix { zoom: 1; } /* IE7 */
 
+.block{display: block;}
+
 .bold{font-weight: bold;}
 .normal{font-weight: normal;}
 .underline{text-decoration: underline;}
