--- a/css/livecod-lsy.css
+++ b/css/livecod-lsy.css
@@ -19,7 +19,9 @@ ol li li::before,ul li li::before{
   background: transparent;
   border: 1px solid #888;
 }
-
+iframe{
+  border: 1px solid #e3e6f0;
+}
 .anchor{
   font-size: 0;
   line-height: 0;
