anchor 클래스 위치 조정

--- a/css/livecod-custom.css
+++ b/css/livecod-custom.css
@@ -86,3 +86,10 @@ h1.title {
 .card-body{
   min-height:50px;
 }
+
+div.anchor {
+  display: block;
+  position: relative;
+  top: -63.3px;
+  visibility: hidden;
+}
