입도현황 hover시 삐져나오는거 확진자 현황 치명율 삐져나오는거 수정

--- a/css/livecod-custom.css
+++ b/css/livecod-custom.css
@@ -64,7 +64,10 @@ h1.title {
 #myAreaChart_three {
   padding-bottom: 1.5rem;
 }
-
+/*제주 입도 현황 height 조절*/
+.jeju_in .card-body .chart-area{
+  height:15rem;
+}
 /* 텍스트 숨기기 */
 .ir-txt {
   display: block;
