--- a/css/livecod-custom.css
+++ b/css/livecod-custom.css
@@ -65,8 +65,10 @@ h1.title {
   padding-bottom: 1.5rem;
 }
 /*제주 입도 현황 height 조절*/
-.jeju_in .card-body .chart-area{
-  height:15rem;
+@media (max-width: 768px){
+  .jeju_in .card-body .chart-area{
+    height: 15rem;
+  }
 }
 /* 텍스트 숨기기 */
 .ir-txt {
