--- a/css/livecod-custom.css
+++ b/css/livecod-custom.css
@@ -98,3 +98,23 @@ div.anchor {
   top: -63.3px;
   visibility: hidden;
 }
+
+.korea_graph_tab {
+  width: 100%;
+}
+
+.korea_graph_tab .nav-item {
+  width: 50%;
+}
+
+.korea_graph_tab .nav-item a{
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.korea_graph_tab li::before {
+  width: 0px;
+  height: 0px;
+}
