--- a/css/livecod-lsy.css
+++ b/css/livecod-lsy.css
@@ -99,6 +99,19 @@ header h6 {
   margin: 0;
   margin-top: 10px;
 }
+.card-header{
+  position: relative;
+}
+.card-header .right{
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%)
+}
+.card-header .right a{
+  color:#a0a2ad;
+}
+
 .container-wrap{
   margin-top: 60px;
 }
