--- a/css/livecod-lsy.css
+++ b/css/livecod-lsy.css
@@ -385,12 +385,10 @@ header .m-none{
 }
 .top_title div:first-child{
   font-size: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 .top_title .rate{
-  position: absolute;
-  right: 0;
-  top: 0;
+  text-align: right;
 }
 
 footer{
@@ -477,12 +475,5 @@ footer{
   }
   .m-mt-1{
     margin-top: 10px;
-  }
-  .top_title div:first-child{
-    margin-bottom: 5px;
-  }
-  .top_title .rate{
-    position: relative;
-    text-align: right
   }
 }
